--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
     "jsdom": "^22.1.0",
     "mocha": "^10.2.0",
     "mocha-multi": "^1.1.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.38.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.4.0"
   }
 }
